--- a/src/components/PhotoCard/style.module.css
+++ b/src/components/PhotoCard/style.module.css
@@ -1,7 +1,7 @@
 .imageWrapper {
     display: flex;
-    width: 100%;
     height: 100%;
+    width: 100%;
     position: relative;
     justify-content: center;
     scroll-snap-align: center;
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: space-between;
     position: absolute;
-    bottom: 30px;
+    bottom: 20%;
     width: 60%;
     background-color: rgba(26, 26, 26, 0.29);
 }
